<resources>
    <string name="app_name">Akelny</string>
    <string name="login">Login</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_link_to_register">Not registered? Register now!</string>
    <string name="signup">Create Account</string>
    <string name="nav_home">Home</string>
    <string name="nav_cart">My Cart</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_restraunts">Restraunts</string>
    <string name="nav_orderlist">Order List</string>
    <string name="nav_myinfo">Account</string>
    <string name="nav_logout">Log out</string>
    <string name="facebook_app_id">584226158668465</string>
    <string name="fb_login_protocol_scheme">fb584226158668465</string>
    <string name="title_activity_maps">Map</string>
    <string name="reset_password">Reset Password</string>
</resources>
