<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_restraunts"
        android:icon="@drawable/baseline_list_black_18dp"
        android:title="@string/nav_restraunts" />

    <item
        android:id="@+id/nav_orderlist"
        android:icon="@drawable/baseline_restaurant_black_18dp"
        android:title="@string/nav_orderlist" />
    <item
        android:icon="@drawable/baseline_shopping_cart_black_18dp"
        android:title="@string/nav_cart"
        android:id="@+id/nav_cart"/>


    <item
        android:id="@+id/nav_myinfo"
        android:icon="@drawable/baseline_account_circle_black_18dp"
        android:title="@string/nav_myinfo" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_call_missed_outgoing_black_18dp"
        android:title="@string/nav_logout" />
</menu>